microservices/template/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-ms
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template-ms
  template:
    metadata:
      labels:
        app: template-ms
    spec:
      containers:
      - name: template
        image: registry.lognes.dev/microservices/template:master-1727068123 # {"$imagepolicy": "flux-system:template-policy"}
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
