microservices/template/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: template-ms-svc
  namespace: default
spec:
  selector:
    app: template-ms-svc
  type: ClusterIP
  ports:
  - name: template-ms-svc
    port: 8080
    targetPort: 8080
